Fix T64144: Crash when displaying audio waveforms in VSE